# dvdbackup

./: .bzrignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.svn  READMEX  REAMDE.vcs  Usage  aclocal.m4  config.h.in  configure  configure.ac
debian/: README  changelog  control  copyright  dvdbackup.dirs  dvdbackup.docs  dvdbackup.install  dvdbackup.manpages  gbp.conf  rules  watch
debian/patches/: ignore-automake-warnings.patch  libdvdread6.1.0.patch  remove-path_max-limitation.patch  series
man/: Makefile.am  Makefile.in  dvdbackup.1
po/: LINGUAS  Makevars  POTFILES.in  da.gmo  da.po  de.gmo  de.po  dvdbackup.pot  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  en_GB.gmo  en_GB.po  es.gmo  es.po  et.gmo  et.po  fr.gmo  fr.po  gl.gmo  gl.po  it.gmo  it.po  nb.gmo  nb.po  pt.gmo  pt.po  ru.gmo  ru.po  sk.gmo  sk.po  tr.gmo  tr.po
src/: Makefile  Makefile.am  Makefile.in  dvdbackup.c  dvdbackup.h  find-sector.c  find-sector.h  main.c
src/libdvdvm/: Makefile  libdvdnav-4.1.3-vm.patch
src/libdvdvm/stub-inc/: dvd_types.h  dvdnav.h  dvdnav_internal.h  ifo_read.h  ifo_types.h  remap.h
